k8s/blog-cr-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-cr-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-cr-service
  template:
    metadata:
      labels:
        app: blog-cr-service
    spec:
      containers:
        - name: blog-cr-service
          image: basmafj/blog_cr_service:latest
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
