k8s/discovery-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
        - name: discovery-server
          image: basmafj/discovery-service:latest
          ports:
            - containerPort: 8761
          resources: {}
      restartPolicy: Always
