k8s/apigateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\hp\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: apigateway
  name: apigateway
spec:
  ports:
    - name: "9001"
      port: 9001
      targetPort: 9000
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: apigateway
status:
  loadBalancer: {}
