k8s/article-feed-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: article-feed-service
  labels:
    app: article-feed-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: article-feed-service
  template:
    metadata:
      labels:
        app: article-feed-service
    spec:
      containers:
        - name: article-feed-service
          image: basmafj/articles_feed_service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: article-feed-service
spec:
  selector:
    app: article-feed-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
