k8s/postgres-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\hp\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres-db
  name: postgres-db
spec:
  ports:
    - name: "5433"
      port: 5433
      targetPort: 5432
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: postgres-db
status:
  loadBalancer: {}
